--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
             Hello world app
         </title>
     </head>
-    
+    <body>
+        When u want to remove the file from staged area--> to untract.use the following command.
+        <h5>git rm --cached <filename></h5>
+            then the file is comes under untracked files.
+
+    </body>
 </html>
