--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang = "en">
     <head>
         <title>
             Hello world app
         </title>
     </head>
     <body>
+        <h1>Git is awesome</h1>
         When u want to remove the file from staged area--> to untract.use the following command.
         <h5>git rm --cached <filename></h5>
             then the file is comes under untracked files.
