Added paragraph to the index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
         When u want to remove the file from staged area--> to untract.use the following command.
         <h5>git rm --cached <filename></h5>
             then the file is comes under untracked files.
-
+        <p>
+            how to see all the commits we have done so far
+        </p>
+        <p>
+        --> git log
+        or
+    --> git log --oneline
+        </p>
     </body>
 </html>
