committed changes to html and css files

--- a/index.html
+++ b/index.html
@@ -18,5 +18,27 @@
         or
     --> git log --oneline
         </p>
+        <p>
+            when you want to see a particular commit use git show HEAD command as below
+            <p>
+                git show HEAD ---> which points to latest commit.when you wants to see the particular commit then use the command as below
+                <p>git show HEAD~[1/2/3...]</p>
+            </p>
+        </p>
+        <div>
+
+            <h4>CheckOut: Undoing changes</h4>
+            <p>When you want to undo the changes that already done use checkout command</p>
+            <p>git checkout filename</p>
+            or
+            <p>git checkout .</p>
+            or
+            <p>git checkout *</p>
+            <p>After checkout changes will be removed.and it is safe becouse, checkout will not delete or change previous commits</p>
+        </div>
+        <div> <h2>Using checkout we can also delete the previous commits using commit id as below</h2>
+            
+        </div>
+
     </body>
 </html>
