changes to index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div>
 
             <h4>CheckOut: Undoing changes</h4>
-            <p>When you want to undo the changes that already done use checkout command</p>
+            <p>When you want to undo the changes that already done, use checkout command</p>
             <p>git checkout filename</p>
             or
             <p>git checkout .</p>
