--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
         <div> <h2>Using checkout we can also delete the previous commits using commit id as below</h2>
             
         </div>
-
+<p>new paragraph for revert</p>
     </body>
 </html>
