--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
         <div> <h2>Using checkout we can also delete the previous commits using commit id as below</h2>
             
         </div>
-
+        <div><h1>Git reset</h1>
+        <p>reset command will permanently delete your work</p>
+        </div>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href = " ">Home</a></li>
+                    <li><a href = "">About</a></li>
+                    <li><a href = "">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </body>
 </html>
