added text for revert and reset

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
         <div> <h2>Using checkout we can also delete the previous commits using commit id as below</h2>
             
         </div>
-
+        <div>
+            <p>difference between git reset --mixed and git reset --soft</P></p>difference>
+            <div><h2>git reset --mixed</h2>
+            <p> it will delete the previous commits and unstage the files from staging area</p>
+            <h2>git reset --soft</h2>
+            <p>it will delete the previous commits and it maintains the files and doesnt unstage the files</p>    
+        </div>
+        </div>    
     </body>
 </html>
