committing for git ignoring

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <h2>git reset --soft</h2>
             <p>it will delete the previous commits and it maintains the files and doesnt unstage the files</p>    
         </div>
-        </div>    
+        </div>   
+        <h1>testing for ignoring</h1> 
     </body>
 </html>
