--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
         </div>   
         <h1>testing for ignoring</h1> 
     <div><h1>hi mama</h1></div>
+    <div><p>I dont know why this gitignoring is working</p></div>
 </body>
 </html>
