--- a/index.html
+++ b/index.html
@@ -50,5 +50,7 @@
         <h1>testing for ignoring</h1> 
     <div><h1>hi mama</h1></div>
     <div><p>I dont know why this gitignoring is working</p></div>
+        <div> Still it doesnt working idont know why</div>
 </body>
+
 </html>
